# cv-check

./: .envrc.example  .gitignore  .pre-commit-config.yaml  .tarpaulin.toml  Cargo.toml  README.md  lcov.info  no_extension.html  test.html
docs/: OPENAI_STRUCTURED_OUTPUTS.md  PRD.md  architecture.md  cli-design.md  color-themes.md  font-themes.md  user-guide.md
examples/: cover-letter.md  cv-missing-sections.md  cv-pagebreak-automatic.md  cv-pagebreak-manual.md  cv-two-column.md  cv.md
src/: CODE_DUPLICATION_REPORT.md  README.md  config.rs  constants.rs  error.rs  lib.rs  main.rs  test_utils.rs
src/ai/: README.md  client.rs  mod.rs  pdf_parser.rs  prompts.rs  schema_gen.rs  schemas.rs
src/cli/: README.md  display.rs  mod.rs
src/constants/: icons.rs  layout.rs
src/parser/: README.md  frontmatter.rs  markdown.rs  mod.rs
src/render/: README.md  docx.rs  html.rs  mod.rs  pdf.rs
src/templates/: README.md  cv_template.md  letter_template.md
src/themes/: README.md  color.rs  font.rs  mod.rs
templates/: cv-simple.typ  cv.typ  letter.typ
tests/: cli_test.rs  config_test.rs  constants_icons_test.rs  constants_layout_test.rs  cover_letter_pdf_test.rs  debug_typst_output.rs  display_test.rs  integration_test.rs  main_test.rs  parser_test.rs  pdf_content_test.rs  pdf_edge_cases_test.rs  pdf_example_test.rs  pdf_h2_location_test.rs  pdf_icons_test.rs  pdf_integration_test.rs  pdf_layout_constants_test.rs  pdf_pagebreak_test.rs  pdf_pagebreak_typst_test.rs  pdf_parser_test.rs  pdf_render_test.rs  pdf_section_wrapping_test.rs  pdf_theme_styling_test.rs  pdf_typst_generation_test.rs  render_test.rs  test_utils_test.rs  themes_registry_test.rs  user_messaging_test.rs
tests/fixtures/: not_a_pdf.txt
tests/integration/ai/: cv_tailoring_test.rs  full_workflow_test.rs  mod.rs  structured_output_test.rs  tailoring_format_test.rs
