[package]
name = "cv_check"
version = "0.1.0"
edition = "2021"
authors = ["avasmick@outlook.com"]
description = "A modern CV and cover letter generator with themeable output"
license = "MIT"
repository = "https://github.com/avastmick/cv-check"
keywords = ["cv", "resume", "pdf", "typst", "generator"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
env_logger = "0.11.8"
include_dir = "0.7.4"
indicatif = "0.18.0"
log = "0.4.27"
openai-api-rs = { version = "6.0.7", default-features = false, features = ["rustls"] }
pdf-extract = "0.9.0"
pulldown-cmark = "0.12"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_yaml = "0.9.34"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full", "macros", "rt-multi-thread"] }

[lib]
name = "cv_check"
path = "src/lib.rs"

[[bin]]
name = "cv"
path = "src/main.rs"

[features]
integration-tests = []

[dev-dependencies]
tempfile = "3.20.0"
approx = "0.5"
assert_cmd = "2.0"
predicates = "3.1"
pdf-extract = "0.9.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
# Elevate default Clippy warnings to errors.
# This will make sure `cargo clippy` fails on any warnings from these groups.
all = "deny"           # Denies all lints in the default `clippy::all` group (correctness, suspicious, complexity, perf, style).
pedantic = "deny"      # Denies all lints in `clippy::pedantic`. Use `#[allow]`s in tests ONLY or on `async` code.
unwrap_used = "deny"   # Denies usage of `unwrap()` in any case.
